crates/decman-lib/snapshots/decman_lib__catalog__proposals__custody__tests__accept_transfer_with_context_populated.snap
---
source: crates/decman-lib/src/catalog/proposals/custody.rs
expression: "AcceptTransferWithContext\n{ accept: &accept, context: Some(&ctx), }.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "transferInstructionCid",
                        value: Some(
                            Value {
                                sum: Some(
                                    ContractId(
                                        "ti-1",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "extraArgs",
                        value: Some(
                            Value {
                                sum: Some(
                                    Record(
                                        Record {
                                            record_id: None,
                                            fields: [
                                                RecordField {
                                                    label: "context",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Record(
                                                                    Record {
                                                                        record_id: None,
                                                                        fields: [
                                                                            RecordField {
                                                                                label: "values",
                                                                                value: Some(
                                                                                    Value {
                                                                                        sum: Some(
                                                                                            TextMap(
                                                                                                TextMap {
                                                                                                    entries: [
                                                                                                        Entry {
                                                                                                            key: "utility.digitalasset.com/transfer-rule",
                                                                                                            value: Some(
                                                                                                                Value {
                                                                                                                    sum: Some(
                                                                                                                        Variant(
                                                                                                                            Variant {
                                                                                                                                variant_id: None,
                                                                                                                                constructor: "AV_Text",
                                                                                                                                value: Some(
                                                                                                                                    Value {
                                                                                                                                        sum: Some(
                                                                                                                                            Text(
                                                                                                                                                "rule-value",
                                                                                                                                            ),
                                                                                                                                        ),
                                                                                                                                    },
                                                                                                                                ),
                                                                                                                            },
                                                                                                                        ),
                                                                                                                    ),
                                                                                                                },
                                                                                                            ),
                                                                                                        },
                                                                                                    ],
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ],
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                                RecordField {
                                                    label: "meta",
                                                    value: Some(
                                                        Value {
                                                            sum: Some(
                                                                Record(
                                                                    Record {
                                                                        record_id: None,
                                                                        fields: [
                                                                            RecordField {
                                                                                label: "values",
                                                                                value: Some(
                                                                                    Value {
                                                                                        sum: Some(
                                                                                            TextMap(
                                                                                                TextMap {
                                                                                                    entries: [],
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ],
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
